<resources>
    <string name="hello_world">Test OpenCV</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select USB Web Camera</string>
    <string name="camera">Camera</string>
    <string name="refresh">Refresh</string>
    <string name="no_device">No USB camera found</string>
    <string name="touch_screen_open">Touch screen to open camera</string>
    <string name="touch_screen_capture">Touch screen to capture or stream </string>
    <string name="color_view">color</string>
    <string name="depth_view">depth</string>
    <string name="usb_device_attached">USB device attached</string>
    <string name="usb_device_detached">USB device detached</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_preview">Preview</string>
    <string name="btn_calibrate">Calibrate</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_measure">Measure</string>
    <string name="btn_reconnect">Reconnect Camera</string>
    <string name="btn_approve">Approve</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_switch">Switch</string>
    <string name="btn_reverse">Reverse</string>
    <string name="msg_illegal_handle">It is a illegal point, can not be approved</string>
    <string name="msg_legal_handle">It is a legal point, can be approved</string>
    <string name="msg_over_point_handle">Cannot approve more points</string>
    <string name="msg_distance_curve">Total distance curve:</string>
    <string name="msg_distance_line">Total distance line:</string>
    <string name="preview_image_settings_title">Preview image settings</string>
    <string name="preview_image_settings_summary">Resolution settings, view configure</string>
    <string name="firmware_version_settings_title">Firmware version settings</string>
    <string name="firmware_version_settings_summary">Firmware version settings R/W</string>
    <string name="firmware_register_settings_title">Firmware register settings</string>
    <string name="firmware_register_settings_summary">Firmware register settings R/W</string>
    <string name="camera_sensor_settings_title">Camera sensor settings</string>
    <string name="camera_sensor_settings_summary">AE, AWB</string>
    <string name="firmware_table_settings_title">Firmware table settings</string>
    <string name="firmware_table_settings_summary">Read firmware table/log</string>
    <string name="software_version_title">Software version</string>
    <string name="software_version_summary">Software version, license claim</string>
    <string name="fish_settings_title">Fish Settings</string>
    <string name="category_general_title">General</string>
    <string name="category_advance_title">Preview Setting</string>
    <string name="category_view_title">View</string>
    <string name="post_process_title">Post process</string>
    <string name="option_title">Option</string>
    <string name="enable_stream_color_checked_title">Enable color stream</string>
    <string name="enable_stream_color_checked_summary">Enable/disable color stream preview </string>
    <string name="enable_stream_depth_checked_title">Enable depth stream</string>
    <string name="enable_stream_depth_checked_summary">Enable/disable depth stream preview </string>
    <string name="depth_data_type_title">Depth Data type</string>
    <string name="apc_preview_frame_size_title">Color Stream</string>
    <string name="depth_preview_frame_size_title">Depth Stream</string>
    <string name="apc_color_preview_frame_rate_title">Color Frame Rate</string>
    <string name="apc_depth_preview_frame_rate_title">Depth Frame Rate</string>
    <string name="input_frame_rate">Input frame rate</string>
    <string name="z_far_title">Z Far for save .ply</string>
    <string name="index_for_file_id_title">Index for file ID</string>
    <string name="index_for_file_id">Index for file ID</string>
    <string name="switch_view_window_title">Display window value</string>
    <string name="reverse_view_window_title">Reverse display window</string>
    <string name="reverse_view_window_summary">Enable/disable reverse display window</string>
    <string name="landscape_view_window_title">Landscape display window</string>
    <string name="landscape_view_window_summary">Enable/disable Landscape display window</string>
    <string name="flip_view_window_title">Flip display</string>
    <string name="flip_view_window_summary">Enable/disable Flip display</string>
    <string name="post_process">Post process</string>
    <string name="post_process_opencl">Enable post process</string>
    <string name="post_process_opencl_summary">Post process with OpenCL</string>
    <string name="monitor_framerate">Show fps</string>
    <string name="monitor_framerate_summry">Enable/disable show fps</string>
    <string name="firmware_version_settings_product_id">Product ID(Hex):</string>
    <string name="firmware_version_settings_vendor_id">Vendor ID(Hex):</string>
    <string name="firmware_version_settings_serialnum">Serial Number:</string>
    <string name="firmware_version_settings_text">Firmware version:</string>
    <string name="firmware_version_settings_unknown">Unknown</string>
    <string name="category_sensor_offset_title">Sensor offset:</string>
    <string name="category_rectify_table_title">Rectify table:</string>
    <string name="category_zd_table_title">ZD table:</string>
    <string name="category_log_title">Log:</string>
    <string name="sensor_offset_read_title">Sensor offset read</string>
    <string name="get_file_path">Get file path</string>
    <string name="rectify_table_read_title">Rectify table read:</string>
    <string name="zd_table_read_title">ZD table read:</string>
    <string name="rectify_log_read_title">Rectify log read:</string>
    <string name="sensor_offset_write_title">Sensor offset write:</string>
    <string name="rectify_table_write_title">Rectify table write:</string>
    <string name="zd_table_write_title">ZD table write:</string>
    <string name="rectify_log_write_title">Rectify log write:</string>
    <string name="read_to_file">read data form camera to file:</string>
    <string name="write_from_file">write data to device form file:</string>
    <string name="dlg_ok">"OK"</string>
    <string name="dlg_cancel">"CANCEL"</string>
    <string name="rectify_table_get_focal_length_title">Get focal length:</string>
    <string name="rectify_table_get_principal_point_title">Get principal point</string>
    <string name="firmware_register_radiobtn_fw">FW register</string>
    <string name="firmware_register_radiobtn_asic">ASIC register</string>
    <string name="firmware_register_radiobtn_i2c">I2C register</string>
    <string name="chkbox_address_title">Register address size is 2 Bytes</string>
    <string name="chkbox_vaule_title">Register vaule size is 2 Bytes</string>
    <string name="firmware_register_slave_id">Slave ID only for I2C register(Hex):</string>
    <string name="firmware_register_address">Register address(Hex):</string>
    <string name="firmware_register_value">Register Value(Hex):</string>
    <string name="btn_get">Get</string>
    <string name="btn_set">Set</string>
    <string name="btn_read_flash">Read flash</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_write_flash">Write flash</string>
    <string name="btn_IR_on">IR On</string>
    <string name="btn_IR_off">IR Off</string>
    <string name="text_IR_value">IR:</string>
    <string name="firmware_register_hint">Please setup register config ...</string>
    <string name="depth_filters_warning">***Warning*** The following configurations will not guarantee the performance.</string>
    <string name="depth_filters_version">Depth filter version : %s</string>
    <string name="depth_filters_title_subsample">Sub Sample</string>
    <string name="depth_filters_title_hole_fill">Hole Fill</string>
    <string name="depth_filters_title_edge_preserving">Edge Preserving</string>
    <string name="depth_filters_title_temporal_filter">Temporal Filter</string>
    <string name="depth_filters_title_remove_curve">Remove curve</string>
    <string name="depth_filter_enabler_enable">Enable filter</string>
    <string name="depth_filter_enabler_full">Full</string>
    <string name="depth_filter_enabler_min">Min</string>
    <string name="depth_filter_common_enabler_str">Enable</string>
    <string name="depth_filter_common_level_str">Level</string>
    <string name="depth_filter_hole_fill_horizontal_enabler_str">Enable horizontal</string>
    <string name="depth_filters_hint_subsample_mode">Mode</string>
    <string name="depth_filters_hint_subsample_factor">Factor</string>
    <string name="depth_filters_hint_hole_fill">@string/depth_filter_common_level_str</string>
    <string name="depth_filters_hint_edge_preserving">@string/depth_filter_common_level_str</string>
    <string name="depth_filters_hint_temporal_filter">Alpha</string>
    <string name="depth_filter_edge_preserve_lambda_hint_string">Lambda: 0.1</string>
    <string name="depth_filter_edge_preserve_sigma_hint_string">Sigma: 0.015</string>
    <string name="depth_filter_temporal_filter_history_hint_string">History: 3</string>
    <string name="software_app_version">App Version:1.2.3.17</string>
    <string name="software_sdk_version">SDK Version:1.0.1.8</string>
    <string name="software_version_license">Apache License</string>
    <string name="software_version_cliam">Copyright (c) 2016, eYs3D Inc.\n All rights reserved.</string>
    <string name="software_version_claim2">Copyright (c) 2019, eYs3D Inc.\n All rights reserved.</string>
    <string name="firmware_version_firmware_version">Firmware Version:</string>
    <string name="firmware_version_product_id">Product ID:</string>
    <string name="firmware_version_vendor_id">Vendor ID:</string>
    <string name="firmware_version_serial_number">Serial No.:</string>
    <string name="firmware_version_value_unknown">Unknown</string>
    <string name="firmware_protect">Firmware Protection:</string>
    <string name="firmware_protect_value_unknown">Unknown</string>
    <string name="firmware_StructLen">Firmware StructLen:</string>
    <string name="firmware_StructLen_value_unknown">Unknown</string>
    <string name="firmware_UnpAreaStartSec">Firmware UnpAreaStartSec:</string>
    <string name="firmware_UnpAreaStartSec_value_unknown">Unknown</string>
    <string name="firmware_factoryReset">Factory Reset</string>
    <string name="firmware_read3X">Read 3X</string>
    <string name="firmware_write3X">Write 3X</string>
    <string name="firmware_read4X">Read 4X</string>
    <string name="firmware_write4X">Write 4X</string>
    <string name="firmware_read5X">Read 5X</string>
    <string name="firmware_write5X">Write 5X</string>
    <string name="firmware_read24X">Read 24X</string>
    <string name="firmware_write24X">Write 24X</string>
    <string name="firmware_root">Root user</string>
    <string name="af_settings_title">Auto Focus Settings</string>
    <string name="af_settings_left_cam_title">LCam</string>
    <string name="af_settings_right_cam_title">RCam</string>
    <string name="af_settings_af_h_start_title">AF_H_START (0-255)</string>
    <string name="af_settings_af_v_start_title">AF_V_START (0-255)</string>
    <string name="af_settings_af_h_size_title">AF_H_SIZE (0-255)</string>
    <string name="af_settings_af_v_size_title">AF_V_SIZE (0-255)</string>
    <string name="af_settings_af_h_skip_title">AF_H_SKIP (0-15)</string>
    <string name="af_settings_af_v_skip_title">AF_V_SKIP (0-15)</string>
    <string name="af_settings_af_thd_title">AF_THD (0-255)</string>
    <string name="af_settings_af_report_title">AF_REPORT (0-16777215)</string>
    <string name="af_settings_af_update_af_report_title">Update AF report</string>
    <string name="af_settings_af_always_update_check_title">Always update</string>
    <string name="af_settings_af_setting_default_value">0</string>
</resources>